# elevator-ad-platform

./: .gitignore  README.md
cloud/: .env.example  CONTRUBUTIING.md  Dockerfile  READEME.md  README.md  dashboard.html  go.mod  go.sum
cloud/cmd/: main.go
cloud/configs/: .env.example  config.yaml
cloud/internal/gateway/: handler.go  kafka.go  manager.go  oss.go  types.go
cloud/internal/logger/: logger.go
cloud/scripts/: setup.sh
cloud/storage/materials/: 可口可乐广告
control-plane/: .env  .env.example  ADAPTATION_NOTES.md  CAMPAIGN_PULL_DELIVERY_SUMMARY.md  CONTRUBUTIING.md  DB_SETUP.md  MODIFICATION_COMPLETE.md  PLAY_LOGS_IMPLEMENTATION.md  PLAY_LOGS_QUICK_REFERENCE.md  READEME.md  pyproject.toml  pytest.ini
control-plane/app/: main.py
control-plane/app/api/v1/: router.py
control-plane/app/api/v1/endpoints/: ad_logs.py  ad_stats.py  campaigns.py  commands.py  debug.py  devices.py  devices_snapshot.py  gateway.py  materials.py  remote.ctrl.py
control-plane/app/core/: config.py
control-plane/app/schemas/: campaign.py  campaigns.py  device.py  material.py
control-plane/app/services/: __init__.py  background_tasks.py  db_service.py  device_snapshot_service.py  kafka_consumer.py  material_service.py
control-plane/data/materials/: index.json
control-plane/db/: init_campaigns.sql  init_materials.sql
control-plane/docs/: CAMPAIGN_API_FRONTEND_CONTRACT.md  CAMPAIGN_DB_UI_SPEC.md  CAMPAIGN_E2E_CHECKLIST.md  CAMPAIGN_FULL_CHAIN_REGRESSION.md  CAMPAIGN_TROUBLESHOOTING.md
control-plane/tests/: conftest.py
control-plane/tests/api/: test_campaigns_flow.py
deploy/: docker-compose.yml  kafka.properties
edge/: .gitignore  123.txt  CMakeLists.txt  README.md  config.json  mock_gateway.py  schedule.db  schedule.mdj  test_schedule.db
edge/head file/: Video_Player.h
edge/include/: Advertisement.hpp  Config.hpp  Database.hpp  EdgeManager.hpp  Log.hpp  NetworkClient.hpp  PlayItem.hpp  Schedule.hpp  ScheduleManager.hpp  VideoPlayer.hpp  Watchdog.hpp
edge/include/models/: Asset.hpp  Interrupt.hpp  PlayItem.hpp  Schedule.hpp  TimeSlot.hpp
edge/resources/: Ads.json  Assets.json  Schedule.json  edge.db
edge/src/: Database.cpp  EdgeManager.cpp  NetworkClient.cpp  ScheduleManager.cpp  VideoPlayer.cpp  Video_Player.cpp  Watchdog.cpp  main copy.cpp  main.cpp  test.cpp
edge/winbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  edge.sln  edge.vcxproj  edge.vcxproj.filters
shared/: go.mod
shared/constants/: msg_types.go
shared/proto/: gateway.proto
tools/: clear_redis.py  e2e_snapshot_test.py  mock_device.py  push_to_gateway.py  simulate_device_reboot_ack.py  temp_test.py  test_device.py
tools/device_cache_ELEV_001/: local_policy.json
tools/device_cache_ELEV_010/: local_policy.json
web/admin/: .env.development  README.md  index.html  package-lock.json  package.json  vite.config.js
web/admin/src/: App.vue  main.js
web/admin/src/api/: adlogs.js  adstats.js  campaigns.js  commands.js  index.js  materials.js
web/admin/src/components/: LayoutHeader.vue  SideNav.vue
web/admin/src/pages/: AdLogs.vue  Campaigns.vue  Commands.vue  Dashboard.vue  DeviceList.vue  Materials.vue
web/admin/src/router/: index.js
web/admin/src/store/: index.js
