[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevator-control-plane"
version = "0.1.0"
description = "Elevator Ad Platform control-plane (FastAPI)"
readme = "READEME.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }

# Runtime dependencies
# Keep in sync with control-plane/READEME.md

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.6",
  "pydantic-settings>=2.1",
  "requests>=2.31",
  "redis>=5.0",
  "python-multipart>=0.0.9",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
# Test dependencies

test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.26",
]

# Conda-friendly dependencies (prefer conda-forge)
conda = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "pydantic>=2.6",
  "pydantic-settings>=2.1",
  "requests>=2.31",
  "redis>=5.0",
  "python-multipart>=0.0.9",
  "psycopg2>=2.9",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
